makko/todo/todo-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  labels:
    app: todo-frontend
    tier: frontend
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
        tier: frontend
    spec:
      containers:
      - image: nginx:1.31-alpine
        name: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: 128Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
      volumes:
      - name: html
        configMap:
          name: todo-frontend-config
          items:
          - key: index.html
            path: index.html
      - name: config
        configMap:
          name: todo-frontend-config
