makko/todo/todo-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  selector:
    app: todo-frontend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
