makko/todo/todo-frontend/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-frontend
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "todo-test.senk0.com"
  rules:
    - backendRefs:
        - name: todo-frontend
          port: 8080
